syntax = "proto3";

package japella.controlapi.v1;

option go_package = "github.com/jamesread/japella/gen/japella/controlapi/v1;controlv1";

message SubmitPostRequest {
	string content = 1;
	string posting_service = 2;
}

message SubmitPostResponse {}

message GetStatusRequest {}

message GetStatusResponse {
	string status = 1;
	repeated string nanoservices = 2;
	string version = 3;
}

message GetPostingServicesRequest {
}

message GetPostingServicesResponse {
	repeated PostingService services = 1;
}

message PostingService {
	string id = 1;
	string protocol = 2;
	string identity = 3;
	string icon = 4;
}

message GetCannedPostsRequest {
}

message GetCannedPostsResponse {
	repeated CannedPost posts = 1;
}

message CannedPost {
	string id = 1;
	string content = 2;
	string created_at = 3;
}

message CreateCannedPostRequest {
	string content = 1;
}

message CreateCannedPostResponse {
	string message = 1;
}

message DeleteCannedPostRequest {
	string id = 1;
}

message DeleteCannedPostResponse {
	string message = 1;
}

service JapellaControlApiService {
	rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}

	rpc SubmitPost(SubmitPostRequest) returns (SubmitPostResponse) {}

	rpc GetPostingServices(GetPostingServicesRequest) returns (GetPostingServicesResponse) {}

	rpc GetCannedPosts(GetCannedPostsRequest) returns (GetCannedPostsResponse) {}

	rpc CreateCannedPost(CreateCannedPostRequest) returns (CreateCannedPostResponse) {}

	rpc DeleteCannedPost(DeleteCannedPostRequest) returns (DeleteCannedPostResponse) {}
}
